--- a/main_processing.ipynb
+++ b/main_processing.ipynb
@@ -35,7 +35,7 @@
     "import time\n",
     "\n",
     "from keras.models import load_model\n",
-    "model = load_model(r\"C:\\Users\\anees\\Desktop\\model_save.h5\")\n",
+    "model = load_model(r\"model_save.h5\")\n",
     "\n",
     "path = r'C:\\Users\\anees\\Desktop\\AutoQMS\\Raw Data\\Cfos_11.22.18_Counts\\forCue'"
    ]
