--- a/main_processing.ipynb
+++ b/main_processing.ipynb
@@ -37,7 +37,7 @@
     "from keras.models import load_model\n",
     "model = load_model(\"model_save.h5\")\n",
     "\n",
-    "path = r'C:\\Users\\anees\\Desktop\\AutoQMS\\Raw Data\\Cfos_11.22.18_Counts\\forCue'"
+    "path = 'set\path\to\images'"
    ]
   },
   {
