--- a/main_processing.ipynb
+++ b/main_processing.ipynb
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "### Import Modules\n",
-    "#### First, we must import the necessary packages for the processing steps..we also need to load the neural network that classifies overlapping cell objects"
+    "#### First, we must import the necessary packages for the processing steps..we also need to load the neural network that classifies overlapping cell objects...in path variable, set full path where images are located"
    ]
   },
   {
